--- a/assets/css/dd.html
+++ b/assets/css/dd.html
@@ -3,69 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter</title>
+    <title>Dropdown Example</title>
     <style>
-        #quantity {
-            font-size: 24px;
-            margin-bottom: 10px;
+        /* Styling untuk dropdown */
+        .dropdown {
+            position: relative;
+            display: inline-block;
         }
 
-        #subtotal {
-            font-size: 18px;
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
         }
 
-        button {
-            font-size: 18px;
-            cursor: pointer;
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
     </style>
 </head>
 <body>
 
-    <div>
-        <button id="minus">-</button>
-        <span id="quantity">1</span>
-        <button id="plus">+</button>
+    <div class="dropdown">
+        <button onclick="toggleDropdown()">Show Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="#">Item 1</a>
+            <a href="#">Item 2</a>
+            <a href="#">Item 3</a>
+        </div>
     </div>
 
-    <p id="subtotal"></p>
-
     <script>
-        var quantity = 1;
-        var harga = 10000;
-
-        document.getElementById('plus').addEventListener('click', function() {
-            quantity++;
-            updateQuantityAndTotal();
-        });
-
-        document.getElementById('minus').addEventListener('click', function() {
-            if (quantity > 1) {
-                quantity--;
-                updateQuantityAndTotal();
-            }
-        });
-
-        function updateQuantityAndTotal() {
-            var quantityElement = document.getElementById('quantity');
-            var totalHargaElement = document.getElementById('subtotal');
-            
-            // Menampilkan nilai quantity
-            quantityElement.textContent = quantity;
-
-            // Menghitung total harga
-            var totalHarga = quantity * harga;
-
-            // Menampilkan total harga dalam format mata uang Rupiah
-            totalHargaElement.textContent = 'Total: Rp ' + formatRupiah(totalHarga);
+        function toggleDropdown() {
+            var dropdown = document.getElementById("myDropdown");
+            dropdown.style.display = (dropdown.style.display === "block") ? "none" : "block";
         }
 
-        function formatRupiah(angka) {
-            var reverse = angka.toString().split('').reverse().join('');
-            var ribuan = reverse.match(/\d{1,3}/g);
-            var formatted = ribuan.join('.').split('').reverse().join('');
-            return formatted;
+        // Tutup dropdown saat klik di luar dropdown
+        window.onclick = function(event) {
+            if (!event.target.matches('.dropdown')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.style.display === "block") {
+                        openDropdown.style.display = "none";
+                    }
+                }
+            }
         }
     </script>
+
 </body>
 </html>
